--- a/igis.css
+++ b/igis.css
@@ -7,6 +7,7 @@ html, body {
     
 #mapContainer {
   position: relative;
+  height: 360px;
     }
 
 #map {
@@ -33,9 +34,6 @@ html, body {
   right: 20px; 
 
     }
-
-
-
 
 
 #legend {
